# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = kms-vault
author = Anthony Almarza
author-email = anthony.almarza@gmail.com
description = A simple pip installable library for encrypting secrets using the AWS key management service.
long_description = file: README.md, ChangeLog
long_description_content_type = text/markdown; charset=UTF-8
home-page = https://github.com/hangarunderground/kms-vault
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    aws
    kms
    vault
    secrets
    encryption
[files]
packages =
    kms_vault

[options.extras_require]
commands = click==6.7
