# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = kms-vault
author = Anthony Almarza
author-email = anthony.almarza@gmail.com
summary = A simple pip installable library for encrypting secrets using the AWS key management service.
description-file = README.md
long-description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/hangarunderground/kms-vault
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = aws, kms, vault, secrets, encryption, security

[files]
packages =
    kms_vault

[entry_points]
console_scripts =
    kms-vault = kms_vault.scripts.kms_vault:cli
